Fixed bug with a gap between div html elements

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -34,6 +34,7 @@ body
         @media (max-width: 800px) and (min-height: 801px)
             width: 100vw
         .board 
+            font-size: 0
             width: 50vw
             text-align: $position
             @media (min-width: 1430px)
